bug 120226, can't show system hint when browser maximize patch by jerry.tan@sun.com r=bryner, sr=hewitt